--- a/task-manager-app/index.html
+++ b/task-manager-app/index.html
@@ -1,6 +1,7 @@
   <!DOCTYPE html>
   <html lang="en">
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Task Manager</title>
       <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
